--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,4 @@
 <%= @links.each do |link| %>
 <%= link.title %></br>
-<%= link.url %> <button class='mark_read' type="button">Mark as read</button>
+<%= link.url %> <button class='mark-read' type="button">Mark as read</button>
 <% end %>
